# NB-Classify_SEAL

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  classifyMulti.cpp  classifySingle.cpp  classifySingleOpt.cpp  encryptModel.cpp  setup.cpp  tools.cpp  tools.h
datasets/: sample22_model.csv  sample22_model.json  sample51_model.csv  sample51_model.json  sample92_model.csv  sample92_model.json
training/: train_ckks.py
